# pytest-sql-bigquery

./: Makefile  Pipfile  README.md  pyproject.toml  setup.py  sqlchecker.py
examples/sql/: sample_test2.sql
pytest_sql_bigquery/: converter.py
pytest_sql_bigquery/integrations/: pytest.py
test/: test_generate_checks_sql.py
